Replace UUID by tsid (#228)
* Migrate from UUID to tsid


* Set license


* DTOs have string IDs

* fix test
